--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
             <name>Prime Repo</name>
             <url>http://repository.primefaces.org</url>
         </repository>
-    </repositories>
-    
+        </repositories>
+        
     <dependencies>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
@@ -35,12 +35,12 @@
             <version>2.5.2</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.3.18.RELEASE</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -48,32 +48,32 @@
             <scope>provided</scope>
         </dependency>
         
-        <!--Back--> 
-         <!--https://mvnrepository.com/artifact/org.springframework/spring-context--> 
+<!--        Back 
+         https://mvnrepository.com/artifact/org.springframework/spring-context 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.1.2.RELEASE</version>
         </dependency>
 
-         <!--https://mvnrepository.com/artifact/org.springframework/spring-core--> 
+         https://mvnrepository.com/artifact/org.springframework/spring-core 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>5.1.1.RELEASE</version>
         </dependency>
-         <!--https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons--> 
+         https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
             <version>2.1.1.RELEASE</version>
         </dependency>
-         <!--https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa--> 
+         https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>2.1.1.RELEASE</version>
-        </dependency>
+        </dependency>-->
         
         <!--Front-->
         <!-- https://mvnrepository.com/artifact/javax.faces/jsf-api -->
